@@ -254,6 +254,7 @@ assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				unconformable
 self-call-recursive:		skip
+rely-on-area-a:				no
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		COBOL2014
