@@ -254,6 +254,7 @@ assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				unconformable
 self-call-recursive:		skip
+rely-on-area-a:				no
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
