@@ -274,6 +274,7 @@ assign-ext-dyn:				ok
 assign-disk-from:			ok
 vsam-status:				ignore
 self-call-recursive:		warning
+rely-on-area-a:				no
 
 # use complete word list; synonyms and exceptions are specified below
 reserved-words:		default
