@@ -253,6 +253,7 @@ assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				ok
 self-call-recursive:		skip
+rely-on-area-a:				no
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		IBM
