@@ -257,6 +257,7 @@ assign-ext-dyn:				ok
 assign-disk-from:			ok
 vsam-status:				ignore
 self-call-recursive:		skip
+rely-on-area-a:				no
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		MF
