@@ -1,3 +1,8 @@
+2022-03-29  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
+
+	* testsuite.src/configuration.at, testsuite.at/syn_misc.at: new
+	  tests for sections and paragraphs that do not end with a period
+	* testsuite.src/run_misc.at: fix lines in trace test
 
 2022-02-10  Simon Sobisch <simonsobisch@gnu.org>
 
